--- a/css/style.css
+++ b/css/style.css
@@ -11,8 +11,8 @@ canvas {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: 100vh;
+  height: 100vh;
   z-index: -1;
 }
 section {
